<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		      android:layout_width="match_parent"
		      android:layout_height="match_parent"
		      android:orientation="vertical"
		      android:gravity="center_horizontal"
		      android:background="#000000">

	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">

		<Button android:id="@+id/btnDemo1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/demo1"
			android:textColor="#FFFFFF"
			/>

		<Button android:id="@+id/btnDemo2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/demo2"
			android:textColor="#FFFFFF"
            />

        <Button android:id="@+id/btnDemo3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/demo3"
            android:textColor="#FFFFFF"
            />

		<Button android:id="@+id/btnDemo4"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/demo4"
			android:textColor="#FFFFFF"
            />

	    </LinearLayout>



    	<LinearLayout
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:background="@layout/background"
            	android:orientation="vertical">

	<!-- new -->
	</LinearLayout>


	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">

		<TextView android:id="@+id/contView1"
			  android:layout_width="0dp"
			  android:layout_height="wrap_content"
			  android:layout_weight="2"
			  android:textColor="#FFFFFF"
			  android:gravity="center_horizontal"
			  android:text="@string/demo1_s"
			  android:textSize="20sp"
			/>
		<AutoCompleteTextView android:id="@+id/contText1"
			  android:layout_width="0dp"
			  android:layout_height="wrap_content"
			  android:layout_weight="5"
			  android:inputType="text"
			  android:textColor="#FFFFFF"
			  android:text="@string/content1"
			  android:gravity="center_horizontal"
              android:textSize="20sp"
              android:textCursorDrawable="@drawable/cursor"
			/>

		
	    </LinearLayout>

            <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
                <TextView android:id="@+id/contView2"
			  android:layout_width="0dp"
			  android:layout_height="wrap_content"
			  android:layout_weight="2"
			  android:textColor="#FFFFFF"
			  android:gravity="center_horizontal"
			  android:text="@string/demo2_s"
			  android:textSize="20sp"
			/>
		<AutoCompleteTextView android:id="@+id/contText2"
			  android:layout_width="0dp"
			  android:layout_height="wrap_content"
			  android:layout_weight="5"
			  android:inputType="text"
			  android:textColor="#FFFFFF"
			  android:text="@string/content2"
			  android:gravity="center_horizontal"
              android:textSize="20sp"
              android:textCursorDrawable="@drawable/cursor"
			/>
            </LinearLayout>
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		<TextView android:id="@+id/contView3"
			  android:layout_width="0dp"
			  android:layout_height="wrap_content"
			  android:layout_weight="2"
			  android:textColor="#FFFFFF"
			  android:gravity="center_horizontal"
			  android:text="@string/demo3_s"
			  android:textSize="20sp"
			/>
		<AutoCompleteTextView android:id="@+id/contText3"
			  android:layout_width="0dp"
			  android:layout_height="wrap_content"
			  android:layout_weight="5"
			  android:inputType="text"
			  android:textColor="#FFFFFF"
			  android:text="@string/content3"
			  android:gravity="center_horizontal"
              android:textSize="20sp"
              android:textCursorDrawable="@drawable/cursor"
			/>
		
	    </LinearLayout>

            <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
                <TextView android:id="@+id/contView4"
			  android:layout_width="0dp"
			  android:layout_height="wrap_content"
			  android:layout_weight="2"
			  android:textColor="#FFFFFF"
			  android:gravity="center_horizontal"
			  android:text="@string/demo4_s"
			  android:textSize="20sp"
			/>
		<AutoCompleteTextView android:id="@+id/contText4"
			  android:layout_width="0dp"
			  android:layout_height="wrap_content"
			  android:layout_weight="5"
			  android:inputType="text"
			  android:textColor="#FFFFFF"
			  android:text="@string/content4"
			  android:gravity="center_horizontal"
              android:textSize="20sp"
              android:textCursorDrawable="@drawable/cursor"
			/>
            </LinearLayout>
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		<TextView android:id="@+id/contView5"
			  android:layout_width="0dp"
			  android:layout_height="wrap_content"
			  android:layout_weight="2"
			  android:textColor="#FFFFFF"
			  android:gravity="center_horizontal"
			  android:text="@string/demo5_s"
			  android:textSize="20sp"
			/>
		<AutoCompleteTextView android:id="@+id/contText5"
			  android:layout_width="0dp"
			  android:layout_height="wrap_content"
			  android:layout_weight="5"
			  android:inputType="text"
			  android:textColor="#FFFFFF"
			  android:text="@string/content5"
			  android:gravity="center_horizontal"
              android:textSize="20sp"
              android:textCursorDrawable="@drawable/cursor"
			/>
		
              </LinearLayout>
            <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
                <TextView android:id="@+id/contView6"
			  android:layout_width="0dp"
			  android:layout_height="wrap_content"
			  android:layout_weight="2"
			  android:textColor="#FFFFFF"
			  android:gravity="center_horizontal"
			  android:text="@string/demo6_s"
			  android:textSize="20sp"
			/>
		<AutoCompleteTextView android:id="@+id/contText6"
			  android:layout_width="0dp"
			  android:layout_height="wrap_content"
			  android:layout_weight="5"
			  android:inputType="text"
			  android:textColor="#FFFFFF"
			  android:text="@string/content6"
			  android:gravity="center_horizontal"
              android:textSize="20sp"
              android:textCursorDrawable="@drawable/cursor"
			/>
    </LinearLayout>

</LinearLayout>
